--- a/templates/booktest/index2.html
+++ b/templates/booktest/index2.html
@@ -7,7 +7,7 @@
 <body>
 <ul>
     {% for book in booklist %}
-    <li>{{ book.title }}</li>
+        <li><a href="/{{ book.id }}/">{{ book.title }}</a></li>
     {% endfor %}
 </ul>
 </body>
